P4-3281 change the logout behaviour to logout not only from the payment service but also DPS as a whole to bring in line with BaSM.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,7 +22,7 @@
             <div sec:authorize="isAuthenticated()" class="govuk-header__content tr mt1">
                 <form id="logoutForm" method="POST" th:action="@{/logout}">
                     <span class="govuk-!-font-weight-bold pr3" th:text="${#authentication.name}"></span>
-                    <button class="govuk-header__link govuk-!-font-weight-bold dib ph3 bg-transparent white bn button-fix">Sign out</button>
+                    <button id="sign-out" class="govuk-header__link govuk-!-font-weight-bold dib ph3 bg-transparent white bn button-fix">Sign out</button>
                 </form>
             </div>
         </div>
