--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,17 +11,20 @@
         </a>
         <a class="govuk-header__link app-header__title__service-name" href="/">Calculate journey variable payments</a>
       </div>
-      <div class="govuk-header__content app-header__rw app-header__right" sec:authorize="isAuthenticated()">
+      <div class="govuk-header__content app-header__rw app-header__right"sec:authorize="isAuthenticated()">
         <nav>
-          <ul class="govuk-header__navigation" aria-label="">
+          <ul class="govuk-header__navigation flex" aria-label="">
             <li class="govuk-header__navigation-item app-header__separator">
-              <span th:text="${#authentication.name}"></span>
+              <a class="govuk-header__link app-header__mouse app-header__right" th:href="${manageYourDetailsUrl}">
+                <span class="govuk-!-display-inline-block" th:text="${#authentication.name}"></span>
+                <span class="govuk-!-display-block">Manage Your Details</span>
+              </a>
             </li>
             <li class="govuk-header__navigation-item">
               <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
                 <input type="submit" value="Logout" />
               </form>
-              <a id="sign-out" class="govuk-header__link app-header__mouse" onclick="document.logoutForm.submit()">Sign out</a>
+              <a id="sign-out" class="govuk-header__link app-header__mouse" style="vertical-align: center" onclick="document.logoutForm.submit()">Sign out</a>
             </li>
           </ul>
         </nav>
