--- a/src/main/resources/templates/annual-price-adjustment.html
+++ b/src/main/resources/templates/annual-price-adjustment.html
@@ -43,10 +43,10 @@
               <div id="rate-hint" class="govuk-hint">Example 1.5</div>
               <p th:if="${#fields.hasErrors('rate')}" class="govuk-error-message">
                 <span class="govuk-visually-hidden">Error:</span>
-                Enter a valid price adjustment greater than zero in the correct format ###.###
+                Enter a valid price adjustment greater than zero in the correct format #.###############
               </p>
               <div class="govuk-input__wrapper">
-                <input class="govuk-input govuk-input--width-5" id="rate" name="rate" type="text"
+                <input class="govuk-input govuk-input--width-10" id="rate" name="rate" type="text"
                        aria-describedby="rate-hint" th:field="*{rate}"
                        th:classappend="${#fields.hasErrors('rate')} ? 'govuk-input--error'">
               </div>
