P4-3391 removing now redundant CLI command for price adjustments and correcting text in the price adjustment view.

--- a/src/main/resources/templates/annual-price-adjustment.html
+++ b/src/main/resources/templates/annual-price-adjustment.html
@@ -83,7 +83,7 @@
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            <span th:inline="text">By applying this rate any existing journey prices in the current contractual year will be adjusted.</span>
+            <span th:inline="text">By applying rate changes any existing journey prices in the current contractual year will be adjusted.</span>
           </strong>
         </div>
         <div class="flex items-center">
