--- a/src/main/resources/templates/move.html
+++ b/src/main/resources/templates/move.html
@@ -14,7 +14,7 @@
     <div class="govuk-breadcrumbs ">
         <ol class="govuk-breadcrumbs__list">
             <li class="govuk-breadcrumbs__list-item">
-                <a class="govuk-breadcrumbs__link" href="/dashboard" th:inline="text">[[${#temporals.monthName(startOfMonthDate)}]]
+                <a class="govuk-breadcrumbs__link" th:href="@{/dashboard(date=${#temporals.format(startOfMonthDate, 'yyyy-MM-dd')})}" th:inline="text">[[${#temporals.monthName(startOfMonthDate)}]]
                     [[${#temporals.format(startOfMonthDate, 'yyyy')}]]</a>
             </li>
             <li class="govuk-breadcrumbs__list-item">
