P4-3921 allow bulk price adjustment of previous contractual year

--- a/src/main/resources/templates/manage-journey-price-catalogue.html
+++ b/src/main/resources/templates/manage-journey-price-catalogue.html
@@ -29,7 +29,7 @@
         Search and edit individual journey prices.
       </td>
     </tr>
-    <div sec:authorize="hasRole('ROLE_PECS_MAINTAIN_PRICE')">
+    <div sec:authorize="hasRole('PECS_MAINTAIN_PRICE')">
       <tr class="govuk-table__row">
         <td class="govuk-table__cell" scope="row">
           <a href="/annual-price-adjustment" class="govuk-heading-s govuk-link--no-visited-state">Apply bulk price adjustment</a>
