--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
           <ul class="govuk-header__navigation flex" aria-label="">
             <li class="govuk-header__navigation-item app-header__separator">
               <a class="govuk-header__link app-header__mouse app-header__right" th:href="${manageYourDetailsUrl}">
-                <span class="govuk-!-display-inline-block" th:text="${#authentication?.name}"></span>
+                <span class="govuk-!-display-inline-block" th:text="${#authentication.name}"></span>
                 <span class="govuk-!-display-block">Manage Your Details</span>
               </a>
             </li>
