MAP-318 Display new event types

--- a/src/main/resources/templates/fragments/event-type.html
+++ b/src/main/resources/templates/fragments/event-type.html
@@ -3,10 +3,14 @@
     <span th:case="'MoveAccept'">Move accepted</span>
     <span th:case="'MoveCancel'">Move cancelled</span>
     <span th:case="'MoveComplete'">Move completed</span>
+    <span th:case="'MoveDateChanged'">Move date changed</span>
     <span th:case="'MoveLockout'">Lockout</span>
+    <span th:case="'MoveOvernightLodge'">Overnight lodge booked</span>
     <span th:case="'MoveLodgingStart'">Lodging started</span>
     <span th:case="'MoveLodgingEnd'">Lodging ended</span>
     <span th:case="'MoveRedirect'">Redirected</span>
+    <span th:case="'MoveRequested'">Move requested</span>
+    <span th:case="'JourneyCreate'">Journey created</span>
     <span th:case="'JourneyStart'">Journey started</span>
     <span th:case="'JourneyComplete'">Journey completed</span>
     <span th:case="'JourneyCancel'">Journey cancelled</span>
