--- a/src/main/resources/templates/find-move.html
+++ b/src/main/resources/templates/find-move.html
@@ -19,7 +19,7 @@
     <form th:action="@{/find-move}" th:object="${form}" method="post">
 
         <div class="govuk-form-group" th:classappend="${#fields.hasErrors('*')} ? 'govuk-form-group--error'">
-            <div th:switch="${#request.getParameter('no-results-for')}">
+          <div th:switch="${noResultFor}">
                 <p th:case="${null}"></p>
                 <p th:case="'invalid-reference'" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span> Please enter a valid move reference ID
