--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -20,7 +20,7 @@
 
 </script>
 
-<div th:replace="fragments/header.html :: header"></div>
+<div th:replace="~{fragments/header.html :: header}"></div>
 
 <div class="moj-primary-navigation">
   <div class="moj-primary-navigation__container">
